package OOAD_LAB.treeView;

public interface INameProvider {
    public String getName(Object o);
}
